fixed deny button visibility & minor styling edits

--- a/skillbuddi/src/styles/profile.css
+++ b/skillbuddi/src/styles/profile.css
@@ -63,9 +63,10 @@
   margin-bottom: 20px;
 }
 
-.message-button {
+.button-request {
   height: 50px;
   width: 200px;
+  margin-top: 1vh;
 
   background-color: #e8c766;
   color: #0f2043;
@@ -99,4 +100,23 @@
 
 .profile-details strong {
   font-size: 20px;
+}
+
+.button-hidden {
+  visibility: hidden;
+
+  height: 50px;
+  width: 200px;
+
+  background-color: #e8c766;
+  color: #0f2043;
+
+  border: 4px solid #3361ac;
+  border-radius: 10px;
+
+  font-family: 'Rubik', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+
+  cursor: pointer;
 }
